<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:visibility="invisible"
            />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewTitleUpdate"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/textViewTitle"/>

        <TextView
            android:id="@+id/textNomeCompleto"
            style="@style/StyleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewNome"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <EditText
            android:id="@+id/editNomeCompleto"
            style="@style/StyleEditTextForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textNomeCompleto"
            android:inputType="text"
            android:maxLength="@integer/maxLines_Big"/>

        <TextView
            android:id="@+id/textCpf"
            style="@style/StyleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewCpf"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editNomeCompleto"/>

        <EditText
            android:id="@+id/editCpf"
            style="@style/StyleEditTextForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textCpf"
            android:inputType="number"
            android:maxLength="@integer/maxLines_Small"/>

        <TextView
            android:id="@+id/textDataNascimento"
            style="@style/StyleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/textData"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editCpf" />

        <TextView
            android:id="@+id/viewErroNascimento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:layout_constraintTop_toBottomOf="@+id/textDataNascimento"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/textCep"
            style="@style/StyleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewCep"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewErroNascimento" />

        <EditText
            android:id="@+id/editCep"
            style="@style/StyleEditTextForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textCep"
            android:inputType="number"
            android:imeOptions="actionGo"
            android:maxLength="@integer/maxLines_Small"/>

        <TextView
            android:id="@+id/textLogradouro"
            style="@style/StyleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewLogradouro"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editCep" />

        <EditText
            android:id="@+id/editLogradouro"
            style="@style/StyleEditTextForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textLogradouro"
            android:inputType="text"
            android:maxLength="@integer/maxLines_Big"/>

        <TextView
            android:id="@+id/textBairro"
            style="@style/StyleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewBairro"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editLogradouro" />

        <EditText
            android:id="@+id/editBairro"
            style="@style/StyleEditTextForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textBairro"
            android:inputType="text"
            android:maxLength="@integer/maxLines_Big"/>

        <TextView
            android:id="@+id/textNumero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/StyleTextView"
            android:text="@string/textViewNumero"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editBairro"/>

        <EditText
            android:id="@+id/editNumero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textNumero"
            android:inputType="number"
            android:maxLength="@integer/maxLines_Small_2"
            style="@style/StyleEditTextForm" />

        <TextView
            android:id="@+id/textComplemento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/StyleTextView"
            android:text="@string/textViewComplemento"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editNumero"/>

        <EditText
            android:id="@+id/editComplemento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textComplemento"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="@string/textViewComplemento"
            android:inputType="text"
            android:maxLength="@integer/maxLines_Small"
            style="@style/StyleEditTextForm" />

        <TextView
            android:id="@+id/textEstado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/StyleTextView"
            android:text="@string/textViewEstado"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editComplemento"/>

        <EditText
            android:id="@+id/editEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textEstado"
            app:layout_constraintRight_toRightOf="parent"
            android:inputType="text"
            android:maxLength="@integer/maxLines_Small"
            style="@style/StyleEditTextForm" />

        <Button
            android:id="@+id/buttonEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titleButtonUpdate"
            app:layout_constraintTop_toBottomOf="@+id/editEstado"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/StyleButton"
            android:background="@drawable/style_button"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>